--- a/csharp-cgdk.csproj
+++ b/csharp-cgdk.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Model\World.cs" />
     <Compile Include="SniperBehavior.cs" />
     <Compile Include="SoldierBehavior.cs" />
+    <Compile Include="TacticCommander.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
